# cis194

./: .gitignore  LICENSE  README.md  cis194.cabal  main.hs
.github/workflows/: haskell.yml
app/: Main.hs
src/: Week1.hs  Week4.hs  Week6.hs
src/Week2/: Log.hs  Week2.hs
src/Week3/: Golf.hs
src/Week5/: ExprT.hs  Week5.hs
src/Week7/: Buffer.hs  Editor.hs  JoinList.hs
test/: Week1Spec.hs  Week2Spec.hs  Week3Spec.hs  Week4Spec.hs  Week5Spec.hs
