cabal-version:      3.0
name:               cis194
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             jessehl
maintainer:         j.loor@hotmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Week1
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: GHC2020

executable cis194
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        cis194

    hs-source-dirs:   app
    default-language: GHC2020

test-suite cis194-test
    import:           warnings
    default-language: GHC2020
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        Week1Spec
    build-depends:
        base ^>=4.17.2.1,
        cis194,
        hspec >=2.7
    build-tool-depends: 
        hspec-discover:hspec-discover == 2.*
