cabal-version:      3.0
name:               cis194
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             jessehl
maintainer:         j.loor@hotmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Week1,Week2.Week2,Week2.Log,Week3.Golf,Week4,Week5.Week5,Week5.ExprT,Week5.Parser,Week5.StackVM,Week6
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: GHC2021

executable cis194
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        cis194

    hs-source-dirs:   app
    default-language: GHC2021

test-suite cis194-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        Week1Spec
        Week2Spec
        Week3Spec
        Week4Spec
        Week5Spec
    build-depends:
        base ^>=4.17.2.1,
        cis194,
        hspec >=2.7
    build-tool-depends: 
        hspec-discover:hspec-discover == 2.*
